--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-html {
-    background-image: url(background.jpg);
-    background-size: cover;
-    
-}
-
-
-
 #mainTitle {
     display: flex;
     flex-wrap: wrap;
@@ -57,7 +49,7 @@ html {
 
 
 
-#box1{ 
+#Box1{ 
     margin: 5px 50px 60px 50px;
     box-shadow: 10px 10px 1px black;
     background: silver;  
@@ -157,31 +149,83 @@ html {
 
 #box-paragraph{
     margin: 10px;
-    text-align: center
-    
-}
-
-nav a {
-    text-decoration-line: none;
-    color: silver;
-    font-weight: bold;
-    font-size: 30px;
-
-}
-
-nav ul {
-    list-style: none;
-}
-
-
-nav{
-    background-color: maroon;
     text-align: center;
-    box-shadow: 5px 5px 2px black;
     
 }
 
-nav li {display: inline-block;
-    padding: 25px
 
+
+.contact-box {
+    display: flex;
+    justify-content: center;
 }
+
+
+.row {
+    margin: 40px;
+}
+
+
+.input-field {
+    margin: 20px;   
+}
+
+.wrapper {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(5, [col] 20% ) ;
+    grid-template-rows: repeat(3, [row] auto  );
+    background-color: #fff;
+    color: rgb(128, 126, 126);
+}
+
+.box {
+    background-color: #fff;
+    color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    font-size: 150%;
+    z-index:10;
+}
+
+    .a {
+        grid-column: col / span  2;
+        grid-row: row ;
+        display: flex;
+        justify-content: center;
+    }
+    .b {
+        grid-column: col 4 / span  2;
+        grid-row: row ;
+        display: flex;
+        justify-content: center;
+    }
+    .c {
+        grid-column: col / span 5 ;
+        grid-row: row 2 ;
+        display: flex;
+        justify-content: center;
+    }
+    .d {
+        grid-column: col 1 / span 3 ;
+        grid-row: row 3 ;
+        display: flex;
+        justify-content: center;
+    }
+
+    .e {
+        grid-column: col 3 / span  3;
+        grid-row: row 3;
+        display: flex;
+        justify-content: center;
+    }
+
+    .f {
+        grid-column: col 2 / span 3;
+        grid-row: row 2  ;
+        background-color: rgba(49,121,207, 0.5);
+        z-index: 20;
+        display: flex;
+        justify-content: center;
+        background-image: linear-gradient(red,orange,yellow,purple);
+    }
