--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@
 }
 
 .box {
-    background-color: #fff;
+    background-color: black;
     color: #fff;
     border-radius: 10px;
     padding: 20px;
